# master_supplemental

./: PT_energy_corrections.ipynb
CAS/ladder/: abc.py  fockstate.py  operator.py  operator_expression.py
MC_generation/: meson.build
MC_generation/include/: statistic.hpp
MC_generation/include/MC/: automc.hpp  quantum.hpp
MC_generation/src/: deltatH_qho.cpp  deltatH_qho_autocorr.cpp  qho.cpp  qho_autocorr.cpp
MC_generation/src/MC/: quantum.cpp
many_ensemble_analysis/: load_data.py
many_ensemble_analysis/continuum_limits/: data_list.py  db.py  extract_DeltaE1_alt.py  extract_H2_lehner.py  extract_H2_weinberg.py  extract_fluctuations.py  extract_gs_lehner.py  extract_gs_weinberg.py  extractors.py  generate_data_continuum_limit.py  handle_observable_extratction.py  handle_observable_extratction.sh  request_h_hp.py  request_various.py  results_DeltaE1_alt.tsv  results_H2_lehner.csv  results_H2_weinberg.csv  results_H_lehner.csv  results_fluctuations.tsv
many_ensemble_analysis/metastatistics/: convert_GEVP_q3q5_delta.py  convert_GEVP_q3q5_delta_mod.py  extract_1st_q3.py  extract_1st_q3.sh  extract_3rd_q3.py  extract_3rd_q3.sh  extract_GEVP_q3q5.py  extract_GEVP_q3q5_delta.py  extract_GEVP_q3q5_delta.sh  extract_GEVP_q3q5_delta_mod.py  extract_GEVP_q3q5_delta_mod.sh  extract_GEVP_q3q5_mod.py  extract_autocorrelations.py  extract_autocorrelations.sh  extract_sign_ses.py  extract_sign_ses.sh  extract_sign_sgs.py  extract_sign_sgs.sh  generate_data_mod.py  generate_data_unmod.py  paths.py  results_autocorrelation.tsv
